--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Live Character Counter</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      max-width: 500px;
+      margin: auto;
+    }
+    textarea {
+      width: 100%;
+      height: 150px;
+      font-size: 16px;
+      padding: 10px;
+      box-sizing: border-box;
+      resize: vertical;
+    }
+    .counter {
+      margin-top: 8px;
+      font-weight: bold;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>Live Character Counter</h2>
+
+  <textarea id="myTextarea" placeholder="Start typing..."></textarea>
+  <div class="counter" id="charCount">Characters: 0</div>
+
+  <script>
+    const textarea = document.getElementById('myTextarea');
+    const charCount = document.getElementById('charCount');
+
+    textarea.addEventListener('input', () => {
+      const length = textarea.value.length;
+      charCount.textContent = `Characters: ${length}`;
+    });
+  </script>
+
+</body>
+</html>
+
 
